Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-126136

QML signal to C++ slot connection nonfunctional if declared within the C++ object with the slot

    XMLWordPrintable

Details

    • Windows
    • 81ef787a6 (dev), 37574f21f (6.8), 5766c5719 (6.7), 74205f9ed (tqtc/lts-6.5)

    Description

      If a signal from QML is connected to a slot in C++ within the C++ object that has the slot, the connection does not function.

      See the attached project.

      The initial state of the project makes the connection outside of the C++ object and the signal is received properly.

      If the connection in main.cpp is commented out and the connection in MyWidget.cpp is commented back in, the connection no longer functions.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              olivier.decanniere Olivier De Cannière
              kevin.zhang Kevin Zhang
              Votes:
              3 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes